--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   stacked: ^3.2.0
   freezed_annotation: ^2.2.0
   json_serializable: ^6.6.2
-
+  intl: ^0.18.0  # or the latest version
+  logger: ^1.0.0 # Add this line
 dev_dependencies:
   flutter_test:
     sdk: flutter # Provides the core Flutter testing framework
